feature/associations-members-routes
* setup roles

* associations and users routes

* PR feedbacks
